$Id$

Summary of Changes to DuroDBMS

DuroDBMS 0.24

- Type definition now supports ORDERED.
  Added flags argument to RDB_define_type() and -ordered option
  to Duro::type define.

- Querys of the form T1 JOIN T2 RENAME { ... } can now be optimized.

- Added RDB_expr_kind(), RDB_expr_op_args(), and RDB_expr_list_get().

- DSession is now a class. Renamed DuroPossrepObject as DefaultPossrepObject
  and VarDef as NameTypePair.
  Added missing methods and javadoc comments to UpdatableXXX classes. 

DuroDBMS 0.23

- Added connect() with recover parameter.

- Added RDB_create_env(), dropped RDB_CREATE flag of RDB_open_env()
   in favour of RDB_RECOVER. The Durotcl command duro::env was
   changed accordingly. 

- EXPLAIN now supported for local tables

- Fixed bug that caused secondary index corruption.

- Upgrade to BerkeleyDB 6.1.

DuroDBMS 0.22

- Added support for user-defined operators implemented in Java.

- Argument of RDB_base_type() is now const.

- Added function RDB_operator_param_count().

- Fixed bug in processing of OPERATOR statement with more than 2 parameters.

DuroDBMS 0.21

- Added DELETE with relation or tuple as 2nd argument to RDB_multi_assign.
  Added DELETE <table exp> <tuple or table exp> to Duro D/T.

- Added Java support.

- Allowing for more than one interpreter per process.

- Moved dbenv argument from Duro_dt_execute() to Duro_init_interp().

- Renamed RDB_obj_comp() as RDB_obj_property() and RDB_obj_set_comp()
  as RDB_obj_set_property().

- Renamed RDB_ec_get_property as RDB_ec_property().

- Added RDB_type_possreps().

DuroDBMS 0.20

- Implemented transition constraints.

- Implemented system keys using serial().

- Fixed bugs in the handling of default values and array-valued attributes.

- Refactored the code, moving functions which do not depend on persistence to
  directory obj.

- Durotcl: Default values must be passed to duro::table create as expressions
  (e.g. strings must be quoted)

DuroDBMS 0.19
